--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,6 @@ DIoTY/iisnode
 DIoTY/.ntvs_analysis.dat
 DIoTY/.ntvs_analysis.dat.tmp
 DIoTY/bin
-DIoTY/node_modules
+
+# enable if you want to download node modules manually.
+# DIoTY/node_modules
