--- a/DIoTY/package.json
+++ b/DIoTY/package.json
@@ -6,15 +6,15 @@
     "start": "node app"
   },
   "dependencies": {
-    "express": "~4.9.0",
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
-    "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
+    "express": "~4.9.0",
     "jade": "~1.6.0",
-    "mysql": "~2.5.1",
-    "serialport": "~1.4.6",
+    "morgan": "~1.3.0",
+    "serialport": "1.7.4",
+    "serve-favicon": "~2.1.3",
+    "sqlite3": "^3.0.10",
     "util": "~0.10.3",
     "xmlhttprequest": "~1.6.0"
   }
