--- a/.gitignore
+++ b/.gitignore
@@ -43,4 +43,6 @@ DIoTY/.ntvs_analysis.dat
 DIoTY/.ntvs_analysis.dat.tmp
 DIoTY/bin
 DIoTY/node_modules
+DIoTY/node_modules/*
+DIoTY/node_modules/.*
 *.suo
