--- a/DIoTY/package.json
+++ b/DIoTY/package.json
@@ -6,15 +6,16 @@
     "start": "node app"
   },
   "dependencies": {
-    "express": "~4.9.0",
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
-    "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
+    "duino": "~0.0.9",
+    "express": "~4.9.0",
     "jade": "~1.6.0",
     "mongodb": "~1.4.19",
-    "duino": "~0.0.9",
+    "morgan": "~1.3.0",
+    "serve-favicon": "~2.1.3",
+    "socket.io": "^1.3.7",
     "xmlhttprequest": "~1.6.0"
   }
 }
