--- a/DIoTY/package.json
+++ b/DIoTY/package.json
@@ -12,6 +12,7 @@
     "express": "~4.9.0",
     "jade": "~1.6.0",
     "morgan": "~1.3.0",
+    "pi-gpio": "0.0.8",
     "serialport": "1.7.4",
     "serve-favicon": "~2.1.3",
     "sqlite3": "^3.0.10",
