--- a/DIoTY/package.json
+++ b/DIoTY/package.json
@@ -1,6 +1,6 @@
 {
   "name": "DIoTY",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "start": "node app"
@@ -17,6 +17,7 @@
     "serve-favicon": "~2.1.3",
     "sqlite3": "^3.0.10",
     "util": "~0.10.3",
-    "xmlhttprequest": "~1.6.0"
+    "xmlhttprequest": "~1.6.0",
+    "socket.io" :  "1.3.7"
   }
 }
